Fix description overflow

--- a/Front-End/everest/src/Projects/ProjectList.css
+++ b/Front-End/everest/src/Projects/ProjectList.css
@@ -25,7 +25,7 @@
   
     #project_list_header {
         background-color: #082f4e;
-        /* box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5); */
+        box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
         display: flex;
         width: 100vw;
         /* height: 17vh; */
@@ -35,7 +35,7 @@
   #project_list_header_title {
     color: white;
     font-size: xx-large;
-    margin: 1.25rem 0.625rem 0.625rem 2rem;
+    margin: 1.25rem 0.625rem 0.625rem 1.563rem;
     text-shadow: 0.188rem 0.188rem 0.125rem black;
     width: 100vw;
     font-family: "Baloo Tammudu 2", cursive;
@@ -143,6 +143,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-height: 400px;
   }
   
   .projectImage {
@@ -193,6 +194,7 @@
     color: rgb(0,0,0,0.6);
     width: 45vw;
     text-align: center;
+    overflow-y: hidden;
     /* font-size: large;
     font-family: "Baloo Tammudu 2", cursive;
     line-height: 1.7;
